--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ disqus-shortname: webjeda-demo
 api-token:   
 
 prose:
-  rooturl: '_posts'
+  #rooturl: '_posts'
   #siteurl: 'http://hmfaysal.github.io/Notepad/'
   #relativeLinks: 'http://hmfaysal.github.io/Notepad/links.jsonp'
   media: 'images'
